Made look better on mobile, fixed spacing

--- a/client/stylesheets/scss/components/_banner.scss
+++ b/client/stylesheets/scss/components/_banner.scss
@@ -1,5 +1,6 @@
 #banner {
   margin-bottom: 12px;
+  line-height:2.5em;
 
   .content {
     @include logo-font();
