--- a/client/stylesheets/scss/views/_splash.scss
+++ b/client/stylesheets/scss/views/_splash.scss
@@ -6,6 +6,7 @@
   font-size:130%;
 
   >.container {
+    padding: 10px;
     @include vertical-align();
     button {
       margin: 0 auto;
@@ -19,11 +20,13 @@
     .subheader {
       font-size: 1.5em;
       margin-bottom: .5em;
+      line-height:1em
+
     }
 
     .header {
       @include logo-font();
-      font-size: 4em;
+      font-size: 3.5em;
       letter-spacing: .2em;
       line-height: 1.33;
     }
@@ -33,6 +36,18 @@
       margin: 0 auto;
     }
 
+    @media (max-width:673px) {
+      .subheader{
+        padding: 0 10px;
+        line-height: 1.2em;
+        font-size: 1em;
+      }
+      .header{
+        font-size:2.5em;
+      }
+    }
+
   }
+
 
 }
